--- a/Application Source/Strive/Multiverse/Strive.Multiverse.csproj
+++ b/Application Source/Strive/Multiverse/Strive.Multiverse.csproj
@@ -130,20 +130,20 @@
                     RelPath = "Schema.xsd"
                     BuildAction = "Content"
                     Generator = "MSDataSetGenerator"
-                    LastGenOutput = "Schema1.cs"
+                    LastGenOutput = "Schema.cs"
                 />
                 <File
-                    RelPath = "Schema.xsx"
-                    DependentUpon = "Schema.xsd"
-                    BuildAction = "None"
-                />
-                <File
-                    RelPath = "Schema1.cs"
+                    RelPath = "Schema.cs"
                     DependentUpon = "Schema.xsd"
                     SubType = "code"
                     BuildAction = "Compile"
                     DesignTime = "True"
                     AutoGen = "True"
+                />
+                <File
+                    RelPath = "Schema.xsx"
+                    DependentUpon = "Schema.xsd"
+                    BuildAction = "None"
                 />
                 <File
                     RelPath = "Terrain.cs"
