*** empty log message ***

--- a/Application Source/Strive/Server/Strive.Server.csproj
+++ b/Application Source/Strive/Server/Strive.Server.csproj
@@ -130,6 +130,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "PhysicalObject.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Skills.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
