*** empty log message ***

--- a/Application Source/Strive/Multiverse/Strive.Multiverse.csproj
+++ b/Application Source/Strive/Multiverse/Strive.Multiverse.csproj
@@ -92,7 +92,22 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "EnumMobileSize.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "EnumMobileState.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "EnumRace.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "EnumWearLocation.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
