*** empty log message ***

--- a/Application Source/Strive/Server/Strive.Server.csproj
+++ b/Application Source/Strive/Server/Strive.Server.csproj
@@ -87,6 +87,11 @@
                     Project = "{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Math3D"
+                    Project = "{14818E27-DABB-4332-B572-21BA9983D886}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
@@ -126,11 +131,6 @@
                 />
                 <File
                     RelPath = "MobileAvatar.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "PhysicalObject.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
