--- a/Application Source/Strive/Server/Strive.Server.csproj
+++ b/Application Source/Strive/Server/Strive.Server.csproj
@@ -92,6 +92,11 @@
                     Project = "{14818E27-DABB-4332-B572-21BA9983D886}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Data"
+                    Project = "{4EA43F2E-977F-4858-A5F8-FE258628888B}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
@@ -149,16 +154,7 @@
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
-                <File
-                    RelPath = "Data\CommandFactory.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Data\MultiverseFactory.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
+                <Folder RelPath = "Data\" />
             </Include>
         </Files>
     </CSHARP>
