*** empty log message ***

--- a/Application Source/Strive/Utils/app.config
+++ b/Application Source/Strive/Utils/app.config
@@ -7,6 +7,8 @@
 		<add key="CommandGeneratorXSLPath" value="CommandGenerator\xsl" />
 		<!-- Next key is ignored by app at the moment -->
 		<add key="CommandGeneratorFileName" value="CommandGenerator\output\Commands.cs" />
+		<!--<add key="databaseConnectionString" value="Data Source=strive3d.net;User ID=strive;Password=jchan77;Initial Catalog=strive;Persist Security Info=False;" />-->
+		<add key="databaseConnectionString" value="Data Source=tehmong\VSdotNET;Initial Catalog=strive;Persist Security Info=False;Integrated Security=SSPI" />
 	</appSettings>
 
 </configuration>
