--- a/Application Source/Strive/Utils/Strive.Utils.csproj
+++ b/Application Source/Strive/Utils/Strive.Utils.csproj
@@ -90,6 +90,16 @@
                     Lcid = "0"
                     WrapperTool = "tlbimp"
                 />
+                <Reference
+                    Name = "Strive.Data"
+                    Project = "{4EA43F2E-977F-4858-A5F8-FE258628888B}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
+                <Reference
+                    Name = "Strive.Multiverse"
+                    Project = "{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
@@ -180,6 +190,16 @@
                 />
                 <File
                     RelPath = "StoredProcedureUI\WinMain.resx"
+                    DependentUpon = "WinMain.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "WorldBuilder\WinMain.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "WorldBuilder\WinMain.resx"
                     DependentUpon = "WinMain.cs"
                     BuildAction = "EmbeddedResource"
                 />
