*** empty log message ***

--- a/Application Source/Strive/Web/Services/Strive.Web.Services.csproj
+++ b/Application Source/Strive/Web/Services/Strive.Web.Services.csproj
@@ -103,6 +103,7 @@
             <Include>
                 <File
                     RelPath = "AssemblyInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
