--- a/Application Source/Strive/Resources/Strive.Resources.csproj
+++ b/Application Source/Strive/Resources/Strive.Resources.csproj
@@ -3,21 +3,21 @@
         ProjectType = "Local"
         ProductVersion = "7.0.9466"
         SchemaVersion = "1.0"
-        ProjectGuid = "{4895086D-8485-46EF-8DED-9E4C16227D64}"
+        ProjectGuid = "{E8037631-248F-411C-BA3A-744FE15704EC}"
     >
         <Build>
             <Settings
-                ApplicationIcon = "App.ico"
+                ApplicationIcon = ""
                 AssemblyKeyContainerName = ""
-                AssemblyName = "Strive.Server"
+                AssemblyName = "Strive.Resources"
                 AssemblyOriginatorKeyFile = ""
                 DefaultClientScript = "JScript"
                 DefaultHTMLPageLayout = "Grid"
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
-                OutputType = "Exe"
-                RootNamespace = "Strive.Server"
-                StartupObject = "Strive.Server.TehServ0r"
+                OutputType = "Library"
+                RootNamespace = "Strive.Resources"
+                StartupObject = ""
             >
                 <Config
                     Name = "Debug"
@@ -60,51 +60,21 @@
                 <Reference
                     Name = "System"
                     AssemblyName = "System"
-                    HintPath = "C:\WINNT\Microsoft.NET\Framework\v1.0.3705\System.dll"
-                />
-                <Reference
-                    Name = "System.XML"
-                    AssemblyName = "System.Xml"
-                    HintPath = "C:\WINNT\Microsoft.NET\Framework\v1.0.3705\System.XML.dll"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.0.3705\System.dll"
                 />
                 <Reference
                     Name = "System.Data"
                     AssemblyName = "System.Data"
-                    HintPath = "C:\WINNT\Microsoft.NET\Framework\v1.0.3705\System.Data.dll"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.0.3705\System.Data.dll"
                 />
                 <Reference
-                    Name = "Strive.Network.Messages"
-                    Project = "{EEEC18D5-063D-4DDD-8328-5182F1BA7F26}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
-                    Name = "Strive.Network.Server"
-                    Project = "{757BF7D3-B811-48D7-AE27-0842B0522536}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
-                    Name = "Strive.Math3D"
-                    Project = "{14818E27-DABB-4332-B572-21BA9983D886}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
-                    Name = "Strive.Data"
-                    Project = "{4EA43F2E-977F-4858-A5F8-FE258628888B}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
-                    Name = "Strive.Multiverse"
-                    Project = "{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                    Name = "System.XML"
+                    AssemblyName = "System.Xml"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.0.3705\System.XML.dll"
                 />
                 <Reference
                     Name = "Strive.Rendering"
                     Project = "{F814C2A2-F0A3-4742-A49E-FF3527A03F12}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
-                />
-                <Reference
-                    Name = "Strive.Resources"
-                    Project = "{E8037631-248F-411C-BA3A-744FE15704EC}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
             </References>
@@ -112,57 +82,32 @@
         <Files>
             <Include>
                 <File
-                    RelPath = "app.config"
-                    BuildAction = "None"
-                />
-                <File
-                    RelPath = "App.ico"
-                    BuildAction = "Content"
-                />
-                <File
                     RelPath = "AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "GameCommandProcessor.cs"
+                    RelPath = "Enumerations.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "Global.cs"
+                    RelPath = "Exceptions.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "Main.cs"
+                    RelPath = "ResourceManager.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "MessageProcessor.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
+                    RelPath = "System.Drawing.Bitmap\mango.jpg"
+                    BuildAction = "Content"
                 />
                 <File
-                    RelPath = "MobileAvatar.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Skills.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Square.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "World.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
+                    RelPath = "System.Drawing.Bitmap\pathgradient.jpg"
+                    BuildAction = "Content"
                 />
             </Include>
         </Files>
