--- a/Application Source/Strive/Rendering/Strive.Rendering.csproj
+++ b/Application Source/Strive/Rendering/Strive.Rendering.csproj
@@ -221,7 +221,11 @@
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
-                <Folder RelPath = "Textures\" />
+                <File
+                    RelPath = "Textures\Texture.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
             </Include>
         </Files>
     </CSHARP>
