--- a/Application Source/Strive/Resources/Strive.Resources.csproj
+++ b/Application Source/Strive/Resources/Strive.Resources.csproj
@@ -77,6 +77,11 @@
                     Project = "{F814C2A2-F0A3-4742-A49E-FF3527A03F12}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Math3D"
+                    Project = "{14818E27-DABB-4332-B572-21BA9983D886}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
