--- a/Application Source/Strive/Network/Server/Strive.Network.Server.csproj
+++ b/Application Source/Strive/Network/Server/Strive.Network.Server.csproj
@@ -82,6 +82,11 @@
                     Project = "{EEEC18D5-063D-4DDD-8328-5182F1BA7F26}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Common"
+                    Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
