*** empty log message ***

--- a/Application Source/Strive/Resources/Strive.Resources.csproj
+++ b/Application Source/Strive/Resources/Strive.Resources.csproj
@@ -82,6 +82,11 @@
                     Project = "{14818E27-DABB-4332-B572-21BA9983D886}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "Strive.Common"
+                    Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
             </References>
         </Build>
         <Files>
