--- a/Application Source/Strive/Data/Strive.Data.csproj
+++ b/Application Source/Strive/Data/Strive.Data.csproj
@@ -87,6 +87,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "CommandFactory.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "MultiverseFactory.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
